<resources>
    <string name="app_name">socialnet</string>
    <string name="feed_title">Лента</string>
    <string name="feed_placeholder">Новости появятся здесь позже</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_name_label">Имя</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_bio_label">О себе</string>
    <string name="profile_status_label">Статус</string>
    <string name="profile_edit_button">Редактировать</string>
    <string name="profile_save_button">Сохранить</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_birthday_label">Birthday</string>
    <string name="profile_name_value">Иван Иванов</string>
    <string name="profile_email_value">ivan@example.com</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_save_profile">Save Profile</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme_label">Тёмная тема</string>
</resources>
